# keyblast

./: Cargo.toml  LICENSE  README.md  build.rs
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/07-async-execution/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-expanded-dsl/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-robustness/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-VERIFICATION.md
.planning/phases/10-ux-polish/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-windows-executable/: 11-01-PLAN.md  11-01-SUMMARY.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-error-notifications/: 12-01-PLAN.md  12-01-SUMMARY.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/phases/13-onboarding-defaults/: 13-01-PLAN.md  13-01-SUMMARY.md  13-VERIFICATION.md
.planning/phases/14-macos-app-bundle/: 14-01-PLAN.md  14-01-SUMMARY.md  14-RESEARCH.md  14-VERIFICATION.md
.planning/phases/2-global-hotkeys/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/3-keystroke-injection/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/4-configuration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/phases/5-configuration-ui/: 5-01-PLAN.md  5-01-SUMMARY.md  5-02-PLAN.md  5-02-SUMMARY.md  5-03-PLAN.md  5-03-SUMMARY.md  5-VERIFICATION.md
.planning/phases/6-platform-polish/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: app.rs  autostart.rs  config.rs  execution.rs  hotkey.rs  injection.rs  logging.rs  main.rs  notification.rs  permission.rs  tray.rs
