[package]
name = "keyblast"
version = "0.1.0"
edition = "2021"
description = "A lightweight macro playback application that injects keystrokes via hotkeys"
license = "MIT"

[dependencies]
tray-icon = "0.21"
muda = "0.17"
image = "0.25"
crossbeam-channel = "0.5"
winit = "0.30"
global-hotkey = "0.7"
enigo = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rfd = "0.15"
notify = "6"
auto-launch = "0.6"
arboard = "3.6"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[dev-dependencies]
tempfile = "3"
