[package]
name = "keyblast"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A lightweight macro playback application that injects keystrokes via hotkeys"
license = "MIT"

[dependencies]
tray-icon = "0.21"
muda = "0.17"
image = "0.25"
crossbeam-channel = "0.5"
winit = "0.30"
global-hotkey = "0.7"
enigo = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rfd = "0.15"
notify = "6"
auto-launch = "0.6"
arboard = "3.6"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
open = "5.3"
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "KeyBlast"
identifier = "com.keyblast.app"
icon = [
    "assets/macos/icon_16x16.png",
    "assets/macos/icon_16x16@2x.png",
    "assets/macos/icon_32x32.png",
    "assets/macos/icon_32x32@2x.png",
    "assets/macos/icon_128x128.png",
    "assets/macos/icon_128x128@2x.png",
    "assets/macos/icon_256x256.png",
    "assets/macos/icon_256x256@2x.png",
    "assets/macos/icon_512x512.png",
    "assets/macos/icon_512x512@2x.png",
]
version = "0.1.0"
copyright = "Copyright (c) 2026 KeyBlast"
category = "public.app-category.productivity"
short_description = "A lightweight macro playback application"
osx_minimum_system_version = "10.13"
